--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    background-image: url(wp2180140-blackjack-wallpapers.jpg);
     font-weight: bold;
     color: white;
     background-color: rgb(34, 39, 34);
@@ -7,7 +8,9 @@ body {
 }
 
 h1 {
-    color: rgb(162, 142, 91);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: bisque;
+    font-size: 100px;
 }
 
 #message-el {
@@ -15,7 +18,7 @@ h1 {
 }
 
 #button-el {
-    color: #016f32;
+    color: white;
     width: 150px;
     background-color: goldenrod;
     padding: 8px;
@@ -31,7 +34,7 @@ h1 {
 }
 
 #newCard-el {
-    color: #016f32;
+    color: white;
     width: 150px;
     background-color: goldenrod;
     padding: 8px;
